// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip attributes basic tooltip 1`] = `
<div>
  <span
    data-tooltip-content="Hello World!"
    data-tooltip-id="basic-example-attr"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top react-tooltip__show"
    id="basic-example-attr"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    Hello World!
    <div
      class="react-tooltip-arrow"
      style="left: -1px; bottom: -4px;"
    />
  </div>
</div>
`;

exports[`tooltip attributes tooltip with class name 1`] = `
<div>
  <span
    data-tooltip-class-name="tooltip-class-name"
    data-tooltip-content="Hello World!"
    data-tooltip-id="example-class-name-attr"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip tooltip-class-name react-tooltip__place-top react-tooltip__show"
    id="example-class-name-attr"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    Hello World!
    <div
      class="react-tooltip-arrow"
      style="left: -1px; bottom: -4px;"
    />
  </div>
</div>
`;

exports[`tooltip attributes tooltip with place 1`] = `
<div>
  <span
    data-tooltip-content="Hello World!"
    data-tooltip-id="example-place-attr"
    data-tooltip-place="right"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-right react-tooltip__show"
    id="example-place-attr"
    role="tooltip"
    style="left: 10px; top: 5px;"
  >
    Hello World!
    <div
      class="react-tooltip-arrow"
      style="left: -4px; top: -1px;"
    />
  </div>
</div>
`;

exports[`tooltip attributes tooltip without element reference 1`] = `
<div>
  <span
    data-tooltip-content="Hello World!"
  >
    Lorem Ipsum
  </span>
</div>
`;
